--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-fNp25zjs.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-RgoKXqmz.js"></script>
   </head>
 
   <body>
